added layout for displaying restaurants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Zomato Clone</string>
     <string name="filter">Filter</string>
     <string name="search">Search</string>
+    <string name="search_hint">Enter search text here...</string>
 </resources>
